# bsm_agent

./: .gitignore  README.md  pyproject.toml
src/bsm_agent/: __init__.py  agent_backend.py  chat_agent.py  cli.py  ewsb.py  expansion.py  fields.py  groups.py  indexed.py  interactions.py  latex.py  latex_display.py  mass_matrices.py  model.py  operators.py  remote_api.py  scalar_invariants.py  sm.py  su2_invariants.py  su3_invariants.py  tensor_algebra.py
